--- a/.gitattributes
+++ b/.gitattributes
@@ -1,17 +1,11 @@
 # Auto detect text files and perform LF normalization
-* text=auto
+* lcsbzm
 
 # Custom for Visual Studio
-*.cs     diff=csharp
+*.cs     Comcast
 
 # Standard to msysgit
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
-*.dot  diff=astextplain
-*.DOT  diff=astextplain
-*.pdf  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
+*m
+*.n
+*.a
+
